@@ -2,17 +2,16 @@ package de.hechler.patrick.zeugs.pfs.impl.pfs;
 
 import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFS.INT;
 import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFS.LINKER;
+import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFS.LOCKUP;
 import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFS.LONG;
 import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFS.PNTR;
-import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFS.LOCKUP;
 import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFSProvider.thrw;
 
 import java.io.IOError;
 import java.io.IOException;
+import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.invoke.MethodHandle;
 import java.nio.channels.ClosedChannelException;
 
@@ -39,33 +38,33 @@ public class PatrFSElement implements FSElement {
 	private static final MethodHandle PFS_ELEMENT_SAME;
 	
 	static {
-		PFS_ELEMENT_CLOSE = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_close").orElseThrow(),
+		PFS_ELEMENT_CLOSE = LINKER.downcallHandle(LOCKUP.find("pfs_element_close").orElseThrow(),
 				FunctionDescriptor.of(INT, INT));
-		PFS_ELEMENT_PARENT = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_parent").orElseThrow(),
+		PFS_ELEMENT_PARENT = LINKER.downcallHandle(LOCKUP.find("pfs_element_parent").orElseThrow(),
 				FunctionDescriptor.of(INT, INT));
-		PFS_ELEMENT_DELETE = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_delete").orElseThrow(),
+		PFS_ELEMENT_DELETE = LINKER.downcallHandle(LOCKUP.find("pfs_element_delete").orElseThrow(),
 				FunctionDescriptor.of(INT, INT));
-		PFS_ELEMENT_GET_FLAGS = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_get_flags").orElseThrow(),
+		PFS_ELEMENT_GET_FLAGS = LINKER.downcallHandle(LOCKUP.find("pfs_element_get_flags").orElseThrow(),
 				FunctionDescriptor.of(INT, INT));
-		PFS_ELEMENT_MODIFY_FLAGS = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_modify_flags").orElseThrow(),
+		PFS_ELEMENT_MODIFY_FLAGS = LINKER.downcallHandle(LOCKUP.find("pfs_element_modify_flags").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, INT, INT));
-		PFS_ELEMENT_GET_CREATE_TIME = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_get_create_time").orElseThrow(),
+		PFS_ELEMENT_GET_CREATE_TIME = LINKER.downcallHandle(LOCKUP.find("pfs_element_get_create_time").orElseThrow(),
 				FunctionDescriptor.of(LONG, INT));
 		PFS_ELEMENT_GET_LAST_MODIFY_TIME = LINKER.downcallHandle(
-				LOCKUP.lookup("pfs_element_get_last_modify_time").orElseThrow(), FunctionDescriptor.of(LONG, INT));
-		PFS_ELEMENT_SET_CREATE_TIME = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_set_create_time").orElseThrow(),
+				LOCKUP.find("pfs_element_get_last_modify_time").orElseThrow(), FunctionDescriptor.of(LONG, INT));
+		PFS_ELEMENT_SET_CREATE_TIME = LINKER.downcallHandle(LOCKUP.find("pfs_element_set_create_time").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, LONG));
 		PFS_ELEMENT_SET_LAST_MODIFY_TIME = LINKER.downcallHandle(
-				LOCKUP.lookup("pfs_element_set_last_modify_time").orElseThrow(), FunctionDescriptor.of(INT, INT, LONG));
-		PFS_ELEMENT_GET_NAME = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_get_name").orElseThrow(),
+				LOCKUP.find("pfs_element_set_last_modify_time").orElseThrow(), FunctionDescriptor.of(INT, INT, LONG));
+		PFS_ELEMENT_GET_NAME = LINKER.downcallHandle(LOCKUP.find("pfs_element_get_name").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR, PNTR));
-		PFS_ELEMENT_SET_NAME = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_set_name").orElseThrow(),
+		PFS_ELEMENT_SET_NAME = LINKER.downcallHandle(LOCKUP.find("pfs_element_set_name").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
-		PFS_ELEMENT_SET_PARENT = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_set_parent").orElseThrow(),
+		PFS_ELEMENT_SET_PARENT = LINKER.downcallHandle(LOCKUP.find("pfs_element_set_parent").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, INT));
-		PFS_ELEMENT_MOVE = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_move").orElseThrow(),
+		PFS_ELEMENT_MOVE = LINKER.downcallHandle(LOCKUP.find("pfs_element_move").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, INT, PNTR));
-		PFS_ELEMENT_SAME = LINKER.downcallHandle(LOCKUP.lookup("pfs_element_same").orElseThrow(),
+		PFS_ELEMENT_SAME = LINKER.downcallHandle(LOCKUP.find("pfs_element_same").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, INT));
 	}
 	
@@ -167,9 +166,9 @@ public class PatrFSElement implements FSElement {
 	@Override
 	public String name() throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			MemorySegment data = ses.allocate(16);
-			data.set(PNTR, 0L, MemoryAddress.NULL);
+			data.set(PNTR, 0L, MemorySegment.NULL);
 			data.set(LONG, 8L, 0L);
 			if (0 == (int) PFS_ELEMENT_GET_NAME.invoke(this.handle, data, data.asSlice(8L, 8L))) {
 				throw thrw(PFSErrorCause.GET_NAME, null);
@@ -183,7 +182,7 @@ public class PatrFSElement implements FSElement {
 	@Override
 	public void name(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			if (0 == (int) PFS_ELEMENT_SET_NAME.invoke(this.handle, ses.allocateUtf8String(name))) {
 				throw thrw(PFSErrorCause.SET_NAME, null);
 			}
@@ -211,7 +210,7 @@ public class PatrFSElement implements FSElement {
 	@Override
 	public void move(Folder parent, String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			if (parent instanceof PatrFolder p) {
 				if (0 == (int) PFS_ELEMENT_MOVE.invoke(this.handle, p.handle, ses.allocateUtf8String(name))) {
 					throw thrw(PFSErrorCause.MOVE_ELEMENT, null);
