@@ -1,12 +1,11 @@
 package de.hechler.patrick.zeugs.pfs.impl.pfs;
 
 import java.io.IOException;
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.Linker;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SymbolLookup;
 import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
@@ -37,8 +36,7 @@ public class PatrFSProvider extends FSProvider {
 	private static final int O_RDWR   = 02;
 	private static final int O_CREAT  = 0100;
 	
-	private static final SymbolLookup GLIBC_LIBARY_LOCKUP = SymbolLookup.libraryLookup("/lib/libc.so.6",
-			MemorySession.global());
+	private static final SymbolLookup GLIBC_LIBARY_LOCKUP = SymbolLookup.libraryLookup("/lib/libc.so.6", SegmentScope.global());
 	
 	static volatile PatrFS loaded;
 	
@@ -59,10 +57,10 @@ public class PatrFSProvider extends FSProvider {
 			if (loaded != null) {
 				throw new IllegalStateException("maximum amount of file systems has been loaded! (max amount: 1)");
 			}
-			MemorySession session = MemorySession.openConfined();
+			Arena session = Arena.openConfined();
 			try {
 				Linker linker = Linker.nativeLinker();
-				try (MemorySession local = MemorySession.openConfined()) {
+				try (Arena local = Arena.openConfined()) {
 					if (fso instanceof PatrFSOptions opts) {
 						loadPatrOpts(linker, local, opts);
 					} else if (fso instanceof PatrRamFSOpts opts) {
@@ -81,22 +79,21 @@ public class PatrFSProvider extends FSProvider {
 	}
 	
 	private static void loadPatrRamOpts(Linker linker, PatrRamFSOpts opts) throws Throwable {
-		MethodHandle newBm            = linker.downcallHandle(
-				PatrFS.LOCKUP.lookup("bm_new_ram_block_manager").orElseThrow(),
-				FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT));
-		MethodHandle pfsLoadAndFormat = linker.downcallHandle(PatrFS.LOCKUP.lookup("pfs_load_and_format").orElseThrow(),
-				FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
-		Addressable  bm               = (Addressable) newBm.invoke(opts.blockCount(), opts.blockSize());
+		MethodHandle  newBm            = linker.downcallHandle(PatrFS.LOCKUP.find("bm_new_ram_block_manager").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT));
+		MethodHandle  pfsLoadAndFormat = linker.downcallHandle(PatrFS.LOCKUP.find("pfs_load_and_format").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
+		MemorySegment bm               = (MemorySegment) newBm.invoke(opts.blockCount(), opts.blockSize());
 		if (0 == (int) pfsLoadAndFormat.invoke(bm, opts.blockCount())) {
 			throw thrw(PFSErrorCause.LOAD_PFS_AND_FORMAT, opts);
 		}
 	}
 	
-	private static void loadPatrOpts(Linker linker, MemorySession local, PatrFSOptions opts) throws Throwable {
-		MethodHandle  open  = linker.downcallHandle(GLIBC_LIBARY_LOCKUP.lookup("open").orElseThrow(), FunctionDescriptor
-				.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
-		MethodHandle  newBm = linker.downcallHandle(PatrFS.LOCKUP.lookup("bm_new_file_block_manager").orElseThrow(),
-				FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
+	private static void loadPatrOpts(Linker linker, Arena local, PatrFSOptions opts) throws Throwable {
+		MethodHandle  open  = linker.downcallHandle(GLIBC_LIBARY_LOCKUP.find("open").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
+		MethodHandle  newBm = linker.downcallHandle(PatrFS.LOCKUP.find("bm_new_file_block_manager").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
 		MemorySegment path  = local.allocateUtf8String(opts.path());
 		int           fd    = (int) open.invoke(path, opts.format() ? O_RDWR | O_CREAT : O_RDWR, 0666);
 		if (fd == -1) {
@@ -110,24 +107,21 @@ public class PatrFSProvider extends FSProvider {
 	}
 	
 	private static void loadWithFormat(Linker linker, PatrFSOptions opts, MethodHandle newBm, int fd) throws Throwable {
-		MethodHandle pfsLoadAndFormat = linker.downcallHandle(PatrFS.LOCKUP.lookup("pfs_load_and_format").orElseThrow(),
-				FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
-		Addressable  bm               = (Addressable) newBm.invoke(fd, opts.blockSize());
+		MethodHandle  pfsLoadAndFormat = linker.downcallHandle(PatrFS.LOCKUP.find("pfs_load_and_format").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
+		MemorySegment bm               = (MemorySegment) newBm.invoke(fd, opts.blockSize());
 		if (0 == (int) pfsLoadAndFormat.invoke(bm, opts.blockCount())) {
 			throw thrw(PFSErrorCause.LOAD_PFS_AND_FORMAT, opts);
 		}
 	}
 	
-	private static void loadWithoutFormat(Linker linker, MemorySession local, PatrFSOptions opts, MethodHandle newBm,
-			int fd) throws Throwable {
-		MethodHandle  pfsLoad = linker.downcallHandle(PatrFS.LOCKUP.lookup("pfs_load").orElseThrow(),
-				FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
-		MethodHandle  lseek   = linker.downcallHandle(GLIBC_LIBARY_LOCKUP.lookup("lseek").orElseThrow(),
-				FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG,
-						ValueLayout.JAVA_INT));
-		MethodHandle  read    = linker.downcallHandle(GLIBC_LIBARY_LOCKUP.lookup("read").orElseThrow(),
-				FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.ADDRESS,
-						ValueLayout.JAVA_LONG));
+	private static void loadWithoutFormat(Linker linker, Arena local, PatrFSOptions opts, MethodHandle newBm, int fd) throws Throwable {
+		MethodHandle  pfsLoad = linker.downcallHandle(PatrFS.LOCKUP.find("pfs_load").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
+		MethodHandle  lseek   = linker.downcallHandle(GLIBC_LIBARY_LOCKUP.find("lseek").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT));
+		MethodHandle  read    = linker.downcallHandle(GLIBC_LIBARY_LOCKUP.find("read").orElseThrow(),
+			FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
 		MemorySegment buf     = local.allocate(8);
 		if (8L != (long) read.invoke(fd, buf, 8L)) { throw new IOException("error on read"); }
 		if (MAGIC_START != buf.get(ValueLayout.JAVA_LONG, 0)) {
@@ -137,9 +131,9 @@ public class PatrFSProvider extends FSProvider {
 			throw new IOException("error on lseek");
 		}
 		if (4L != (long) read.invoke(fd, buf, 4L)) { throw new IOException("error on read"); }
-		int         bs = buf.get(ValueLayout.JAVA_INT, 0);
-		Addressable bm = (Addressable) newBm.invoke(fd, bs);
-		if (0 == (int) pfsLoad.invoke(bm, MemoryAddress.NULL)) { throw thrw(PFSErrorCause.LOAD_PFS, opts.path()); }
+		int           bs = buf.get(ValueLayout.JAVA_INT, 0);
+		MemorySegment bm = (MemorySegment) newBm.invoke(fd, bs);
+		if (0 == (int) pfsLoad.invoke(bm, MemorySegment.NULL)) { throw thrw(PFSErrorCause.LOAD_PFS, opts.path()); }
 	}
 	
 	public static IOException thrw(Throwable t) throws IOException {
@@ -160,8 +154,21 @@ public class PatrFSProvider extends FSProvider {
 		throw cause.func.apply(msg, pfsErrno);
 	}
 	
+	private static MemorySegment cach;
+	private static MemorySegment cach2;
+	
 	public static int pfsErrno() {
-		return PatrFS.LOCKUP.lookup("pfs_errno").orElseThrow().address().get(ValueLayout.JAVA_INT, 0);
+		MemorySegment val = cach;
+		if (val == null) {
+			val  = MemorySegment.ofAddress(PatrFS.LOCKUP.find("pfs_err_loc").orElseThrow().address(), 8L);
+			cach = val;
+		}
+		long addr = val.get(ValueLayout.JAVA_LONG, 0L);
+		if (cach2 == null || addr != cach2.address()) {
+			val   = MemorySegment.ofAddress(addr, 4);
+			cach2 = val;
+		}
+		return val.get(ValueLayout.JAVA_INT, 0);
 	}
 	
 	public static void unload(FS loaded) {
