@@ -9,7 +9,7 @@ import static de.hechler.patrick.zeugs.pfs.impl.pfs.PatrFSProvider.thrw;
 
 import java.io.IOException;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.lang.invoke.MethodHandle;
 import java.nio.channels.ClosedChannelException;
 
@@ -31,23 +31,23 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	private static final MethodHandle PFS_FOLDER_CREATE_PIPE;
 	
 	static {
-		PFS_FOLDER_OPEN_ITER = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_open_iter").orElseThrow(),
+		PFS_FOLDER_OPEN_ITER = LINKER.downcallHandle(LOCKUP.find("pfs_folder_open_iter").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, INT));
-		PFS_FOLDER_CHILD_COUNT = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_child_count").orElseThrow(),
+		PFS_FOLDER_CHILD_COUNT = LINKER.downcallHandle(LOCKUP.find("pfs_folder_child_count").orElseThrow(),
 				FunctionDescriptor.of(LONG, INT));
-		PFS_FOLDER_CHILD = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_child").orElseThrow(),
+		PFS_FOLDER_CHILD = LINKER.downcallHandle(LOCKUP.find("pfs_folder_child").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
-		PFS_FOLDER_CHILD_FOLDER = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_child_folder").orElseThrow(),
+		PFS_FOLDER_CHILD_FOLDER = LINKER.downcallHandle(LOCKUP.find("pfs_folder_child_folder").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
-		PFS_FOLDER_CHILD_FILE = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_child_file").orElseThrow(),
+		PFS_FOLDER_CHILD_FILE = LINKER.downcallHandle(LOCKUP.find("pfs_folder_child_file").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
-		PFS_FOLDER_CHILD_PIPE = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_child_pipe").orElseThrow(),
+		PFS_FOLDER_CHILD_PIPE = LINKER.downcallHandle(LOCKUP.find("pfs_folder_child_pipe").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
-		PFS_FOLDER_CREATE_FOLDER = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_create_folder").orElseThrow(),
+		PFS_FOLDER_CREATE_FOLDER = LINKER.downcallHandle(LOCKUP.find("pfs_folder_create_folder").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
-		PFS_FOLDER_CREATE_FILE = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_create_file").orElseThrow(),
+		PFS_FOLDER_CREATE_FILE = LINKER.downcallHandle(LOCKUP.find("pfs_folder_create_file").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
-		PFS_FOLDER_CREATE_PIPE = LINKER.downcallHandle(LOCKUP.lookup("pfs_folder_create_pipe").orElseThrow(),
+		PFS_FOLDER_CREATE_PIPE = LINKER.downcallHandle(LOCKUP.find("pfs_folder_create_pipe").orElseThrow(),
 				FunctionDescriptor.of(INT, INT, PNTR));
 	}
 	
@@ -72,9 +72,9 @@ public class PatrFolder extends PatrFSElement implements Folder {
 		private static final MethodHandle PFS_ITER_NEXT;
 		
 		static {
-			PFS_ITER_CLOSE = LINKER.downcallHandle(LOCKUP.lookup("pfs_iter_close").orElseThrow(),
+			PFS_ITER_CLOSE = LINKER.downcallHandle(LOCKUP.find("pfs_iter_close").orElseThrow(),
 					FunctionDescriptor.of(INT, INT));
-			PFS_ITER_NEXT = LINKER.downcallHandle(LOCKUP.lookup("pfs_iter_next").orElseThrow(),
+			PFS_ITER_NEXT = LINKER.downcallHandle(LOCKUP.find("pfs_iter_next").orElseThrow(),
 					FunctionDescriptor.of(INT, INT));
 		}
 		
@@ -169,7 +169,7 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	@Override
 	public FSElement childElement(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			int res = (int) PFS_FOLDER_CHILD.invoke(this.handle, ses.allocateUtf8String(name));
 			if (res == -1) { throw thrw(PFSErrorCause.GET_CHILD, name); }
 			return new PatrFSElement(res);
@@ -181,7 +181,7 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	@Override
 	public Folder childFolder(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			int res = (int) PFS_FOLDER_CHILD_FOLDER.invoke(this.handle, ses.allocateUtf8String(name));
 			if (res == -1) { throw thrw(PFSErrorCause.GET_CHILD, name); }
 			return new PatrFolder(res);
@@ -193,7 +193,7 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	@Override
 	public File childFile(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			int res = (int) PFS_FOLDER_CHILD_FILE.invoke(this.handle, ses.allocateUtf8String(name));
 			if (res == -1) { throw thrw(PFSErrorCause.GET_CHILD, name); }
 			return new PatrFile(res);
@@ -205,7 +205,7 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	@Override
 	public Pipe childPipe(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			int res = (int) PFS_FOLDER_CHILD_PIPE.invoke(this.handle, ses.allocateUtf8String(name));
 			if (res == -1) { throw thrw(PFSErrorCause.GET_CHILD, name); }
 			return new PatrPipe(res);
@@ -217,7 +217,7 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	@Override
 	public Folder createFolder(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			int res = (int) PFS_FOLDER_CREATE_FOLDER.invoke(this.handle, ses.allocateUtf8String(name));
 			if (res == -1) { throw thrw(PFSErrorCause.CREATE_CHILD, name); }
 			return new PatrFolder(res);
@@ -229,7 +229,7 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	@Override
 	public File createFile(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			int res = (int) PFS_FOLDER_CREATE_FILE.invoke(this.handle, ses.allocateUtf8String(name));
 			if (res == -1) { throw thrw(PFSErrorCause.CREATE_CHILD, name); }
 			return new PatrFile(res);
@@ -241,7 +241,7 @@ public class PatrFolder extends PatrFSElement implements Folder {
 	@Override
 	public Pipe createPipe(String name) throws IOException {
 		ensureOpen();
-		try (MemorySession ses = MemorySession.openConfined()) {
+		try (Arena ses = Arena.openConfined()) {
 			int res = (int) PFS_FOLDER_CREATE_PIPE.invoke(this.handle, ses.allocateUtf8String(name));
 			if (res == -1) { throw thrw(PFSErrorCause.CREATE_CHILD, name); }
 			return new PatrPipe(res);
